--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ html {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 2em;
+    margin-top: 2vh;
 }
 
 .add-clip {
@@ -102,6 +102,9 @@ body {
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     background-color: white;
+    max-height: 100vh;
+    max-width: 100vw;
+    overflow: hidden;
 }
 
 .button {
@@ -110,9 +113,9 @@ body {
     box-shadow: inset 0 1000px white;
     border: 1px solid transparent;
     border-radius: 15px;
-    width: 15em;
-    margin: 1em auto 1em auto;
-    height: 3.2em;
+    width: 70vw;
+    margin: 2vh auto 2vh auto;
+    height: 6vh;
     text-align: center;
     font-weight: bold;
 }
@@ -146,9 +149,9 @@ body {
 }
 
 .categories {
-    width: 5em;
+    width: 30vh;
     margin: 15vh auto 0 auto;
-    font-size: 2em;
+    font-size: 3.4vh;
     text-align: center;
     font-weight: 300;
     padding-left:0;
@@ -161,7 +164,7 @@ body {
 }
 .category-inactive {
     color:grey;
-    margin: 1em 0 1em 0;
+    margin: 3.5vh 0 3.5vh 0;
 }
 .category-active {
     color: transparent;    
