--- a/css/styles.css
+++ b/css/styles.css
@@ -335,9 +335,8 @@ li {
 
 .profileIframe-img {
     position: relative;
-    margin: 10px 0 0 -92px;
+    margin: 0 0 0 -92px;
     left:0;
-    top:-2.07vh;
 }
 
 .profileIframe-img-img {
