--- a/css/styles.css
+++ b/css/styles.css
@@ -242,9 +242,10 @@ li {
 }
 
 .loader {
+    margin: 0 auto 0 auto;
     width: 48px;
     height: 48px;
-    border: 5px solid #FFF;
+    border: 5px solid #DADADA;
     border-bottom-color: transparent;
     border-radius: 50%;
     display: inline-block;
